@@ -12,6 +12,7 @@ Changelog
 - Add webaction forms (add and edit) and management view. [njohner]
 - Fix solr error during copy/paste of word document. [njohner]
 - Allow non-member contributors to use the REST API. [Rotonen]
+- Implement resolving dossiers recursively via REST API. [lgraf]
 - Add archival file management view on dossier level. [njohner]
 - Show archival file state on documents overview for managers. [njohner]
 - Fix tests failing due to timezone leading to date shift. [njohner]
